flux/infrastructure/configs/k3d/flux-ui.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: flux-ui
  namespace: flux-system
spec:
  entryPoints:
  - web
  routes:
  - kind: Rule
    match: Host(`flux.lvh.me`)
    services:
    - name: ww-gitops-weave-gitops
      port: 9001
